[project]
name = "print_formats"
authors = [
    { name = "Marketplace Publisher", email = "hello@example.com"}
]
description = "Professional Print Formats for ERPNext"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "print_formats"
